Remove endereço localhost do final da página

--- a/index.html
+++ b/index.html
@@ -354,6 +354,4 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNvVjC97Ty97iTmJGfbLeixWaXtz8LkQM" async defer></script>
     <script src="script.js"></script>
 </body>
-</html>http://127.0.0.1:5500/index.html
-ngrok http 5500
-
+</html>
