Atualizar referência do logo no HTML

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="nav" id="navbar">
         <div class="container nav-container">
             <a href="#" class="logo">
-                <img src="public/images/logo.DP.png" alt="Product Digital Studio" class="logo-image">
+                <img src="public/images/ltrans_product.png" alt="Product Digital Studio" class="logo-image">
             </a>
             <div class="nav-links">
                 <a href="#servicos" class="nav-link">Serviços</a>
