Adicionar links das redes sociais no footer

--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
                 <div class="footer-brand">
                     <img src="public/images/logo.dp_pretobranco.png" alt="Product Digital Studio" class="footer-logo">
                     <div class="social-links">
-                        <a href="#" class="social-link" target="_blank" rel="noopener">LinkedIn</a>
-                        <a href="#" class="social-link" target="_blank" rel="noopener">Instagram</a>
-                        <a href="#" class="social-link" target="_blank" rel="noopener">Behance</a>
+                        <a href="https://www.linkedin.com/in/anarovina/" class="social-link" target="_blank" rel="noopener">LinkedIn</a>
+                        <a href="https://www.instagram.com/ana_rovina_studio/" class="social-link" target="_blank" rel="noopener">Instagram</a>
+                        <a href="https://www.behance.net/analdrovina" class="social-link" target="_blank" rel="noopener">Behance</a>
                     </div>
                 </div>
                 <div class="footer-contact">
