Separar frase 'Seu Produto Digital Começa Aqui' em linha própria

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                     para o Seu Negócio
                 </h1>
                 <p class="hero-subtitle">
-                    <strong>Plataformas, MVPs e Identidade Visual</strong> no Mesmo Lugar<br>
+                    <strong>Plataformas, MVPs e Identidade Visual</strong> no Mesmo Lugar
+                </p>
+                <p class="hero-subtitle">
                     Seu Produto Digital Começa Aqui
                 </p>
                 <a href="#contato" class="btn btn-primary">Solicitar Proposta</a>
