Adicionar novo projeto ao portfólio: Plataforma de Gerenciamento com ChatBot

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="#contato" class="btn btn-primary">Solicitar Proposta</a>
             </div>
         </div>
-        <div class="hero-scroll-indicator">
+        <div class="hero-scroll-indicator"
             <span>ROLE PARA DESCOBRIR</span>
             <div class="scroll-line"></div>
         </div>
@@ -260,6 +260,18 @@
                         <p class="portfolio-services">Naming, Identidade da Marca, MVP (em andamento) e protótipo final</p>
                     </div>
                 </div>
+
+                <!-- Portfolio Item 4 -->
+                <div class="portfolio-item">
+                    <div class="portfolio-image">
+                        <img src="public/images/chat_bot.png" alt="Plataforma de Gerenciamento com ChatBot" class="portfolio-img">
+                    </div>
+                    <div class="portfolio-info">
+                        <h3 class="portfolio-title">Plataforma de Gerenciamento com ChatBot</h3>
+                        <span class="portfolio-category">Sistema Inteligente com Assistente de IA</span>
+                        <p class="portfolio-services">Design da Plataforma, Integração de ChatBot e Prototipagem</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -351,3 +363,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
