--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <a href="#servicos" class="nav-link">Serviços</a>
                 <a href="#produto-digital" class="nav-link">Integração</a>
                 <a href="#portfolio" class="nav-link">Portfolio</a>
+                <a href="#marca" class="nav-link nav-link-brand">Identidade da Marca</a>
                 <a href="#contato" class="nav-link nav-link-cta">Solicitar Proposta</a>
             </div>
             <button class="mobile-menu-toggle" aria-label="Menu">
