Alterar link 'Identidade da Marca' para abrir https://www.arovinastudio.com.br/

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#servicos" class="nav-link">Serviços</a>
                 <a href="#produto-digital" class="nav-link">Integração</a>
                 <a href="#portfolio" class="nav-link">Portfolio</a>
-                <a href="#marca" class="nav-link nav-link-brand">Identidade da Marca</a>
+                <a href="https://www.arovinastudio.com.br/" class="nav-link nav-link-brand" target="_blank" rel="noopener">Identidade da Marca</a>
                 <a href="#contato" class="nav-link nav-link-cta">Solicitar Proposta</a>
             </div>
             <button class="mobile-menu-toggle" aria-label="Menu">
