Adicionar Master Designer ao portfólio: Plataforma de Análise de Briefing

--- a/index.html
+++ b/index.html
@@ -273,6 +273,18 @@
                         <p class="portfolio-services">Design da Plataforma, Integração de ChatBot e Prototipagem</p>
                     </div>
                 </div>
+
+                <!-- Portfolio Item 5 -->
+                <div class="portfolio-item">
+                    <div class="portfolio-image">
+                        <img src="public/images/Master_Designer.png" alt="Master Designer - Plataforma de Briefing" class="portfolio-img">
+                    </div>
+                    <div class="portfolio-info">
+                        <h3 class="portfolio-title">Master Designer</h3>
+                        <span class="portfolio-category">Plataforma de Análise de Briefing para Designers Gráficos</span>
+                        <p class="portfolio-services">Arquitetura, UI/UX Design, Protótipo e Validação</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
