Adicionar link do WhatsApp no rodapé

--- a/index.html
+++ b/index.html
@@ -362,6 +362,9 @@
                     <div class="contact-detail-item">
                         <a href="mailto:contato@arovinastudio.com.br">contato@arovinastudio.com.br</a>
                     </div>
+                    <div class="contact-detail-item">
+                        <a href="https://wa.me/5511911501686" class="whatsapp-link" target="_blank" rel="noopener">WhatsApp: +55 (11) 91150-1686</a>
+                    </div>
                 </div>
                 <div class="footer-legal">
                     <p>&copy; 2025 Product Digital Studio. Todos os direitos reservados.</p>
