Fix: hero spacing for laptop view; make scroll indicator white; fix markup

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <a href="#contato" class="btn btn-primary">Solicitar Proposta</a>
             </div>
         </div>
-        <div class="hero-scroll-indicator"
-            <span>ROLE PARA DESCOBRIR</span>
+        <div class="hero-scroll-indicator">
+            <span>Role para descobrir</span>
             <div class="scroll-line"></div>
         </div>
     </section>
